AOC 2022 - Day 24 part1